# modificaarchform

./: README.md
code/: file_path.py  main.py
code/pkg/: procesar_swaps copy.py  procesar_swaps.py  utils.py
note/: analitica.ipynb  analitica_ok_nok_simple.ipynb
proyecto_swaps_corr_r5/: README.md
proyecto_swaps_corr_r5-2/code/: logger.py
proyecto_swaps_corr_r5-2/code/pkg/: utils.py
proyecto_swaps_corr_r5-2/tests/: test_paths.py
proyecto_swaps_corr_r5-3/: manual_proyecto_swaps.md  pyproject.toml
proyecto_swaps_corr_r5-3/code/: file_path.py
proyecto_swaps_corr_r5-3/code/pkg/: actualizar_informe.py  procesar_swaps.py
proyecto_swaps_corr_r5-3/new/: .gitignore
proyecto_swaps_corr_r5-3/new/code/: file_path.py  logger.py  main.py
proyecto_swaps_corr_r5-3/new/code/pkg/: utils.py
proyecto_swaps_corr_r5/code/: main.py
proyecto_swaps_corr_r5/code/pkg/: utils.py
